--- a/src/output.css
+++ b/src/output.css
@@ -4932,9 +4932,6 @@
   .mt-14 {
     margin-top: calc(var(--spacing) * 14);
   }
-  .mt-36 {
-    margin-top: calc(var(--spacing) * 36);
-  }
   .breadcrumbs {
     max-width: 100%;
     overflow-x: auto;
@@ -5010,14 +5007,8 @@
   .mb-6 {
     margin-bottom: calc(var(--spacing) * 6);
   }
-  .mb-8 {
-    margin-bottom: calc(var(--spacing) * 8);
-  }
   .mb-12 {
     margin-bottom: calc(var(--spacing) * 12);
-  }
-  .ml-8 {
-    margin-left: calc(var(--spacing) * 8);
   }
   .carousel-item {
     box-sizing: content-box;
@@ -5699,17 +5690,8 @@
   .max-h-screen {
     max-height: 100vh;
   }
-  .min-h-\[400px\] {
-    min-height: 400px;
-  }
-  .min-h-\[410px\] {
-    min-height: 410px;
-  }
   .min-h-\[420px\] {
     min-height: 420px;
-  }
-  .min-h-\[430px\] {
-    min-height: 430px;
   }
   .min-h-\[495px\] {
     min-height: 495px;
@@ -5816,20 +5798,8 @@
       width: calc(0.25rem * 4);
     }
   }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
-  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
-  }
-  .w-16 {
-    width: calc(var(--spacing) * 16);
-  }
-  .w-52 {
-    width: calc(var(--spacing) * 52);
-  }
-  .w-56 {
-    width: calc(var(--spacing) * 56);
   }
   .w-\[32\%\] {
     width: 32%;
@@ -6215,14 +6185,17 @@
   .auto-rows-min {
     grid-auto-rows: min-content;
   }
+  .grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
   .grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
-  .grid-cols-6 {
-    grid-template-columns: repeat(6, minmax(0, 1fr));
+  .grid-cols-\[32\%_auto\] {
+    grid-template-columns: 32% auto;
   }
   .grid-cols-none {
     grid-template-columns: none;
@@ -6962,14 +6935,8 @@
     color: var(--color-warning-content);
     --alert-color: var(--color-warning);
   }
-  .border-gray-100 {
-    border-color: var(--color-gray-100);
-  }
   .border-gray-200 {
     border-color: var(--color-gray-200);
-  }
-  .border-gray-300 {
-    border-color: var(--color-gray-300);
   }
   .border-yellow-300 {
     border-color: var(--color-yellow-300);
@@ -7455,9 +7422,6 @@
     font-size: 0.625rem;
     padding-inline: calc(0.25rem * 2 - var(--border));
   }
-  .px-0 {
-    padding-inline: calc(var(--spacing) * 0);
-  }
   .px-0\.5 {
     padding-inline: calc(var(--spacing) * 0.5);
   }
@@ -7476,9 +7440,6 @@
   .px-9 {
     padding-inline: calc(var(--spacing) * 9);
   }
-  .py-0 {
-    padding-block: calc(var(--spacing) * 0);
-  }
   .py-0\.5 {
     padding-block: calc(var(--spacing) * 0.5);
   }
@@ -7487,9 +7448,6 @@
   }
   .py-4 {
     padding-block: calc(var(--spacing) * 4);
-  }
-  .py-5 {
-    padding-block: calc(var(--spacing) * 5);
   }
   .py-6 {
     padding-block: calc(var(--spacing) * 6);
@@ -7505,9 +7463,6 @@
     &::file-selector-button {
       font-size: 1.375rem;
     }
-  }
-  .pt-8 {
-    padding-top: calc(var(--spacing) * 8);
   }
   .pt-10 {
     padding-top: calc(var(--spacing) * 10);
@@ -7567,10 +7522,6 @@
   .text-3xl {
     font-size: var(--text-3xl);
     line-height: var(--tw-leading, var(--text-3xl--line-height));
-  }
-  .text-4xl {
-    font-size: var(--text-4xl);
-    line-height: var(--tw-leading, var(--text-4xl--line-height));
   }
   .text-lg {
     font-size: var(--text-lg);
@@ -8038,12 +7989,6 @@
   .range-warning {
     color: var(--color-warning);
     --range-thumb: var(--color-warning-content);
-  }
-  .text-gray-400 {
-    color: var(--color-gray-400);
-  }
-  .text-gray-500 {
-    color: var(--color-gray-500);
   }
   .text-gray-600 {
     color: var(--color-gray-600);
@@ -9210,6 +9155,11 @@
       min-height: 570px;
     }
   }
+  .sm\:grid-cols-2 {
+    @media (width >= 40rem) {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
   .sm\:grid-cols-3 {
     @media (width >= 40rem) {
       grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -9223,11 +9173,6 @@
   .sm\:bg-\[\#FFF9F4\] {
     @media (width >= 40rem) {
       background-color: #FFF9F4;
-    }
-  }
-  .sm\:px-36 {
-    @media (width >= 40rem) {
-      padding-inline: calc(var(--spacing) * 36);
     }
   }
   .sm\:py-36 {
@@ -9265,6 +9210,11 @@
       display: block;
     }
   }
+  .md\:flex {
+    @media (width >= 48rem) {
+      display: flex;
+    }
+  }
   .md\:hidden {
     @media (width >= 48rem) {
       display: none;
@@ -9275,14 +9225,24 @@
       min-height: 640px;
     }
   }
+  .md\:grid-cols-2 {
+    @media (width >= 48rem) {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
   .md\:grid-cols-3 {
     @media (width >= 48rem) {
       grid-template-columns: repeat(3, minmax(0, 1fr));
     }
   }
-  .md\:grid-cols-4 {
+  .md\:grid-cols-\[40\%_auto\] {
     @media (width >= 48rem) {
-      grid-template-columns: repeat(4, minmax(0, 1fr));
+      grid-template-columns: 40% auto;
+    }
+  }
+  .md\:grid-cols-\[50\%_auto\] {
+    @media (width >= 48rem) {
+      grid-template-columns: 50% auto;
     }
   }
   .md\:text-lg {
@@ -9307,9 +9267,19 @@
       min-height: 780px;
     }
   }
+  .lg\:grid-cols-3 {
+    @media (width >= 64rem) {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+  }
   .lg\:grid-cols-6 {
     @media (width >= 64rem) {
       grid-template-columns: repeat(6, minmax(0, 1fr));
+    }
+  }
+  .lg\:grid-cols-\[40\%_auto\] {
+    @media (width >= 64rem) {
+      grid-template-columns: 40% auto;
     }
   }
   .lg\:text-\[3\.5rem\] {
@@ -9323,19 +9293,14 @@
       line-height: 73px;
     }
   }
-  .xl\:w-49 {
+  .xl\:grid-cols-\[32\%_auto\] {
     @media (width >= 80rem) {
-      width: calc(var(--spacing) * 49);
+      grid-template-columns: 32% auto;
     }
   }
   .\32 xl\:min-h-\[840px\] {
     @media (width >= 96rem) {
       min-height: 840px;
-    }
-  }
-  .\32 xl\:w-56 {
-    @media (width >= 96rem) {
-      width: calc(var(--spacing) * 56);
     }
   }
 }
