--- a/src/output.css
+++ b/src/output.css
@@ -3624,9 +3624,6 @@
       }
     }
   }
-  .end-0 {
-    inset-inline-end: calc(var(--spacing) * 0);
-  }
   .end-1 {
     inset-inline-end: calc(var(--spacing) * 1);
   }
@@ -4947,20 +4944,8 @@
   .mt-5 {
     margin-top: calc(var(--spacing) * 5);
   }
-  .mt-6 {
-    margin-top: calc(var(--spacing) * 6);
-  }
   .mt-8 {
     margin-top: calc(var(--spacing) * 8);
-  }
-  .mt-9 {
-    margin-top: calc(var(--spacing) * 9);
-  }
-  .mt-10 {
-    margin-top: calc(var(--spacing) * 10);
-  }
-  .mt-12 {
-    margin-top: calc(var(--spacing) * 12);
   }
   .mt-14 {
     margin-top: calc(var(--spacing) * 14);
@@ -4968,23 +4953,11 @@
   .mt-60 {
     margin-top: calc(var(--spacing) * 60);
   }
-  .mt-64 {
-    margin-top: calc(var(--spacing) * 64);
-  }
   .mt-72 {
     margin-top: calc(var(--spacing) * 72);
   }
-  .mt-80 {
-    margin-top: calc(var(--spacing) * 80);
-  }
   .mt-96 {
     margin-top: calc(var(--spacing) * 96);
-  }
-  .mt-\[400px\] {
-    margin-top: 400px;
-  }
-  .mt-\[450px\] {
-    margin-top: 450px;
   }
   .breadcrumbs {
     max-width: 100%;
@@ -5055,9 +5028,6 @@
     opacity: 60%;
     font-weight: 600;
   }
-  .mb-1 {
-    margin-bottom: calc(var(--spacing) * 1);
-  }
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
   }
@@ -5066,15 +5036,6 @@
   }
   .mb-6 {
     margin-bottom: calc(var(--spacing) * 6);
-  }
-  .mb-9 {
-    margin-bottom: calc(var(--spacing) * 9);
-  }
-  .mb-10 {
-    margin-bottom: calc(var(--spacing) * 10);
-  }
-  .mb-12 {
-    margin-bottom: calc(var(--spacing) * 12);
   }
   .ml-0 {
     margin-left: calc(var(--spacing) * 0);
@@ -5756,38 +5717,8 @@
   .h-4 {
     height: calc(var(--spacing) * 4);
   }
-  .h-80 {
-    height: calc(var(--spacing) * 80);
-  }
-  .h-96 {
-    height: calc(var(--spacing) * 96);
-  }
-  .h-320 {
-    height: calc(var(--spacing) * 320);
-  }
-  .h-\[500px\] {
-    height: 500px;
-  }
-  .h-\[600px\] {
-    height: 600px;
-  }
-  .h-\[640px\] {
-    height: 640px;
-  }
-  .h-\[654px\] {
-    height: 654px;
-  }
-  .h-\[680px\] {
-    height: 680px;
-  }
-  .h-\[720px\] {
-    height: 720px;
-  }
   .h-\[780px\] {
     height: 780px;
-  }
-  .h-\[800px\] {
-    height: 800px;
   }
   .h-full {
     height: 100%;
@@ -5801,20 +5732,11 @@
   .max-h-screen {
     max-height: 100vh;
   }
-  .min-h-96 {
-    min-height: calc(var(--spacing) * 96);
-  }
-  .min-h-\[400px\] {
-    min-height: 400px;
-  }
   .min-h-\[420px\] {
     min-height: 420px;
   }
   .min-h-\[495px\] {
     min-height: 495px;
-  }
-  .min-h-\[654px\] {
-    min-height: 654px;
   }
   .min-h-\[780px\] {
     min-height: 780px;
@@ -5930,26 +5852,11 @@
   .w-4 {
     width: calc(var(--spacing) * 4);
   }
-  .w-\[30\%\] {
-    width: 30%;
-  }
-  .w-\[40\%\] {
-    width: 40%;
-  }
-  .w-\[45\%\] {
-    width: 45%;
-  }
   .w-\[50\%\] {
     width: 50%;
   }
-  .w-\[55\%\] {
-    width: 55%;
-  }
   .w-\[60\%\] {
     width: 60%;
-  }
-  .w-\[60\] {
-    width: 60;
   }
   .w-\[80\%\] {
     width: 80%;
@@ -6052,10 +5959,6 @@
   .translate-full {
     --tw-translate-x: 100%;
     --tw-translate-y: 100%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-x-\[-50\%\] {
-    --tw-translate-x: -50%;
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .translate-y-\[-50\%\] {
@@ -6349,12 +6252,6 @@
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
-  .grid-cols-\[25\%_auto\] {
-    grid-template-columns: 25% auto;
-  }
-  .grid-cols-\[60\%_auto\] {
-    grid-template-columns: 60% auto;
-  }
   .grid-cols-none {
     grid-template-columns: none;
   }
@@ -6537,9 +6434,6 @@
   }
   .gap-8 {
     gap: calc(var(--spacing) * 8);
-  }
-  .gap-28 {
-    gap: calc(var(--spacing) * 28);
   }
   .space-y-reverse {
     :where(& > :not(:last-child)) {
@@ -7319,20 +7213,8 @@
     --tw-gradient-position: in oklab,;
     background-image: conic-gradient(var(--tw-gradient-stops));
   }
-  .bg-linear-45 {
-    --tw-gradient-position: 45deg in oklab,;
-    background-image: linear-gradient(var(--tw-gradient-stops));
-  }
-  .bg-linear-90 {
-    --tw-gradient-position: 90deg in oklab,;
-    background-image: linear-gradient(var(--tw-gradient-stops));
-  }
   .bg-linear-145 {
     --tw-gradient-position: 145deg in oklab,;
-    background-image: linear-gradient(var(--tw-gradient-stops));
-  }
-  .bg-linear-to-r {
-    --tw-gradient-position: to right in oklab,;
     background-image: linear-gradient(var(--tw-gradient-stops));
   }
   .bg-radial {
@@ -7648,9 +7530,6 @@
   .px-1 {
     padding-inline: calc(var(--spacing) * 1);
   }
-  .px-3 {
-    padding-inline: calc(var(--spacing) * 3);
-  }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
@@ -7672,17 +7551,11 @@
   .px-20 {
     padding-inline: calc(var(--spacing) * 20);
   }
-  .px-36 {
-    padding-inline: calc(var(--spacing) * 36);
-  }
   .py-0 {
     padding-block: calc(var(--spacing) * 0);
   }
   .py-0\.5 {
     padding-block: calc(var(--spacing) * 0.5);
-  }
-  .py-2 {
-    padding-block: calc(var(--spacing) * 2);
   }
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
@@ -7701,15 +7574,6 @@
   }
   .py-12 {
     padding-block: calc(var(--spacing) * 12);
-  }
-  .py-14 {
-    padding-block: calc(var(--spacing) * 14);
-  }
-  .py-36 {
-    padding-block: calc(var(--spacing) * 36);
-  }
-  .py-\[18px\] {
-    padding-block: 18px;
   }
   .file-input-xl {
     padding-inline-end: calc(0.25rem * 6);
@@ -7732,26 +7596,14 @@
   .pr-20 {
     padding-right: calc(var(--spacing) * 20);
   }
-  .pr-72 {
-    padding-right: calc(var(--spacing) * 72);
-  }
   .pb-14 {
     padding-bottom: calc(var(--spacing) * 14);
-  }
-  .pb-36 {
-    padding-bottom: calc(var(--spacing) * 36);
-  }
-  .pb-\[140px\] {
-    padding-bottom: 140px;
   }
   .pl-5 {
     padding-left: calc(var(--spacing) * 5);
   }
   .pl-10 {
     padding-left: calc(var(--spacing) * 10);
-  }
-  .pl-24 {
-    padding-left: calc(var(--spacing) * 24);
   }
   .text-center {
     text-align: center;
@@ -7803,17 +7655,9 @@
     font-size: var(--text-3xl);
     line-height: var(--tw-leading, var(--text-3xl--line-height));
   }
-  .text-4xl {
-    font-size: var(--text-4xl);
-    line-height: var(--tw-leading, var(--text-4xl--line-height));
-  }
   .text-5xl {
     font-size: var(--text-5xl);
     line-height: var(--tw-leading, var(--text-5xl--line-height));
-  }
-  .text-base {
-    font-size: var(--text-base);
-    line-height: var(--tw-leading, var(--text-base--line-height));
   }
   .text-lg {
     font-size: var(--text-lg);
@@ -7927,9 +7771,6 @@
   .select-xs {
     --size: calc(var(--size-field, 0.25rem) * 6);
     font-size: 0.6875rem;
-  }
-  .text-\[3\.5rem\] {
-    font-size: 3.5rem;
   }
   .text-\[15px\] {
     font-size: 15px;
@@ -8292,14 +8133,8 @@
   .text-black {
     color: var(--color-black);
   }
-  .text-gray-300 {
-    color: var(--color-gray-300);
-  }
   .text-gray-400 {
     color: var(--color-gray-400);
-  }
-  .text-gray-500 {
-    color: var(--color-gray-500);
   }
   .text-gray-600 {
     color: var(--color-gray-600);
@@ -8519,23 +8354,8 @@
   .scheme-only-light {
     color-scheme: only light;
   }
-  .opacity-5 {
-    opacity: 5%;
-  }
-  .opacity-10 {
-    opacity: 10%;
-  }
-  .opacity-20 {
-    opacity: 20%;
-  }
-  .opacity-40 {
-    opacity: 40%;
-  }
   .opacity-70 {
     opacity: 70%;
-  }
-  .opacity-75 {
-    opacity: 75%;
   }
   .opacity-80 {
     opacity: 80%;
@@ -9484,16 +9304,6 @@
       margin-top: calc(var(--spacing) * 36);
     }
   }
-  .sm\:mb-3 {
-    @media (width >= 40rem) {
-      margin-bottom: calc(var(--spacing) * 3);
-    }
-  }
-  .sm\:mb-6 {
-    @media (width >= 40rem) {
-      margin-bottom: calc(var(--spacing) * 6);
-    }
-  }
   .sm\:mb-12 {
     @media (width >= 40rem) {
       margin-bottom: calc(var(--spacing) * 12);
@@ -9509,16 +9319,6 @@
       min-height: 570px;
     }
   }
-  .sm\:w-\[20\%\] {
-    @media (width >= 40rem) {
-      width: 20%;
-    }
-  }
-  .sm\:w-\[30\%\] {
-    @media (width >= 40rem) {
-      width: 30%;
-    }
-  }
   .sm\:w-\[40\%\] {
     @media (width >= 40rem) {
       width: 40%;
@@ -9527,11 +9327,6 @@
   .sm\:w-\[45\%\] {
     @media (width >= 40rem) {
       width: 45%;
-    }
-  }
-  .sm\:w-\[80\%\] {
-    @media (width >= 40rem) {
-      width: 80%;
     }
   }
   .sm\:grid-cols-3 {
@@ -9560,12 +9355,6 @@
       padding-block: calc(var(--spacing) * 36);
     }
   }
-  .sm\:text-3xl {
-    @media (width >= 40rem) {
-      font-size: var(--text-3xl);
-      line-height: var(--tw-leading, var(--text-3xl--line-height));
-    }
-  }
   .sm\:text-4xl {
     @media (width >= 40rem) {
       font-size: var(--text-4xl);
@@ -9587,6 +9376,21 @@
   .md\:mt-14 {
     @media (width >= 48rem) {
       margin-top: calc(var(--spacing) * 14);
+    }
+  }
+  .md\:mt-32 {
+    @media (width >= 48rem) {
+      margin-top: calc(var(--spacing) * 32);
+    }
+  }
+  .md\:mt-36 {
+    @media (width >= 48rem) {
+      margin-top: calc(var(--spacing) * 36);
+    }
+  }
+  .md\:mt-40 {
+    @media (width >= 48rem) {
+      margin-top: calc(var(--spacing) * 40);
     }
   }
   .md\:mt-60 {
@@ -9642,19 +9446,9 @@
       min-height: 640px;
     }
   }
-  .md\:w-\[50\%\] {
-    @media (width >= 48rem) {
-      width: 50%;
-    }
-  }
   .md\:w-\[56\%\] {
     @media (width >= 48rem) {
       width: 56%;
-    }
-  }
-  .md\:w-\[60\%\] {
-    @media (width >= 48rem) {
-      width: 60%;
     }
   }
   .md\:w-full {
@@ -9712,29 +9506,19 @@
       padding-inline: calc(var(--spacing) * 4);
     }
   }
-  .md\:px-6 {
-    @media (width >= 48rem) {
-      padding-inline: calc(var(--spacing) * 6);
-    }
-  }
   .md\:py-8 {
     @media (width >= 48rem) {
       padding-block: calc(var(--spacing) * 8);
     }
   }
-  .md\:pt-10 {
+  .md\:pb-24 {
     @media (width >= 48rem) {
-      padding-top: calc(var(--spacing) * 10);
+      padding-bottom: calc(var(--spacing) * 24);
     }
   }
   .md\:pb-\[140px\] {
     @media (width >= 48rem) {
       padding-bottom: 140px;
-    }
-  }
-  .md\:pl-10 {
-    @media (width >= 48rem) {
-      padding-left: calc(var(--spacing) * 10);
     }
   }
   .md\:text-2xl {
@@ -9749,22 +9533,10 @@
       line-height: var(--tw-leading, var(--text-3xl--line-height));
     }
   }
-  .md\:text-base {
-    @media (width >= 48rem) {
-      font-size: var(--text-base);
-      line-height: var(--tw-leading, var(--text-base--line-height));
-    }
-  }
   .md\:text-lg {
     @media (width >= 48rem) {
       font-size: var(--text-lg);
       line-height: var(--tw-leading, var(--text-lg--line-height));
-    }
-  }
-  .md\:text-sm {
-    @media (width >= 48rem) {
-      font-size: var(--text-sm);
-      line-height: var(--tw-leading, var(--text-sm--line-height));
     }
   }
   .md\:text-xl {
@@ -9789,6 +9561,21 @@
       margin-top: calc(var(--spacing) * 9);
     }
   }
+  .lg\:mt-40 {
+    @media (width >= 64rem) {
+      margin-top: calc(var(--spacing) * 40);
+    }
+  }
+  .lg\:mt-50 {
+    @media (width >= 64rem) {
+      margin-top: calc(var(--spacing) * 50);
+    }
+  }
+  .lg\:mt-52 {
+    @media (width >= 64rem) {
+      margin-top: calc(var(--spacing) * 52);
+    }
+  }
   .lg\:mb-9 {
     @media (width >= 64rem) {
       margin-bottom: calc(var(--spacing) * 9);
@@ -9807,16 +9594,6 @@
   .lg\:min-h-\[350px\] {
     @media (width >= 64rem) {
       min-height: 350px;
-    }
-  }
-  .lg\:min-h-\[480px\] {
-    @media (width >= 64rem) {
-      min-height: 480px;
-    }
-  }
-  .lg\:min-h-\[520px\] {
-    @media (width >= 64rem) {
-      min-height: 520px;
     }
   }
   .lg\:min-h-\[780px\] {
@@ -9844,16 +9621,6 @@
       gap: calc(var(--spacing) * 8);
     }
   }
-  .lg\:px-6 {
-    @media (width >= 64rem) {
-      padding-inline: calc(var(--spacing) * 6);
-    }
-  }
-  .lg\:py-8 {
-    @media (width >= 64rem) {
-      padding-block: calc(var(--spacing) * 8);
-    }
-  }
   .lg\:py-\[18px\] {
     @media (width >= 64rem) {
       padding-block: 18px;
@@ -9869,6 +9636,11 @@
       padding-right: calc(var(--spacing) * 72);
     }
   }
+  .lg\:pb-\[140px\] {
+    @media (width >= 64rem) {
+      padding-bottom: 140px;
+    }
+  }
   .lg\:pl-5 {
     @media (width >= 64rem) {
       padding-left: calc(var(--spacing) * 5);
@@ -9877,11 +9649,6 @@
   .lg\:pl-14 {
     @media (width >= 64rem) {
       padding-left: calc(var(--spacing) * 14);
-    }
-  }
-  .lg\:pl-16 {
-    @media (width >= 64rem) {
-      padding-left: calc(var(--spacing) * 16);
     }
   }
   .lg\:text-2xl {
@@ -9939,6 +9706,11 @@
     @media (width >= 64rem) {
       --tw-leading: 73px;
       line-height: 73px;
+    }
+  }
+  .xl\:mt-60 {
+    @media (width >= 80rem) {
+      margin-top: calc(var(--spacing) * 60);
     }
   }
   .xl\:min-h-\[430px\] {
