--- a/src/output.css
+++ b/src/output.css
@@ -4950,12 +4950,6 @@
   .mt-14 {
     margin-top: calc(var(--spacing) * 14);
   }
-  .mt-60 {
-    margin-top: calc(var(--spacing) * 60);
-  }
-  .mt-72 {
-    margin-top: calc(var(--spacing) * 72);
-  }
   .mt-96 {
     margin-top: calc(var(--spacing) * 96);
   }
@@ -5036,9 +5030,6 @@
   }
   .mb-6 {
     margin-bottom: calc(var(--spacing) * 6);
-  }
-  .ml-0 {
-    margin-left: calc(var(--spacing) * 0);
   }
   .ml-0\.5 {
     margin-left: calc(var(--spacing) * 0.5);
@@ -5842,9 +5833,6 @@
     &.rating-xl *:not(.rating-hidden) {
       width: calc(0.25rem * 4);
     }
-  }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
   }
   .w-1\/2 {
     width: calc(1/2 * 100%);
@@ -7521,9 +7509,6 @@
     font-size: 0.625rem;
     padding-inline: calc(0.25rem * 2 - var(--border));
   }
-  .px-0 {
-    padding-inline: calc(var(--spacing) * 0);
-  }
   .px-0\.5 {
     padding-inline: calc(var(--spacing) * 0.5);
   }
@@ -7550,9 +7535,6 @@
   }
   .px-20 {
     padding-inline: calc(var(--spacing) * 20);
-  }
-  .py-0 {
-    padding-block: calc(var(--spacing) * 0);
   }
   .py-0\.5 {
     padding-block: calc(var(--spacing) * 0.5);
@@ -7598,6 +7580,9 @@
   }
   .pb-14 {
     padding-bottom: calc(var(--spacing) * 14);
+  }
+  .pl-3 {
+    padding-left: calc(var(--spacing) * 3);
   }
   .pl-5 {
     padding-left: calc(var(--spacing) * 5);
@@ -9383,21 +9368,6 @@
       margin-top: calc(var(--spacing) * 32);
     }
   }
-  .md\:mt-36 {
-    @media (width >= 48rem) {
-      margin-top: calc(var(--spacing) * 36);
-    }
-  }
-  .md\:mt-40 {
-    @media (width >= 48rem) {
-      margin-top: calc(var(--spacing) * 40);
-    }
-  }
-  .md\:mt-60 {
-    @media (width >= 48rem) {
-      margin-top: calc(var(--spacing) * 60);
-    }
-  }
   .md\:mb-0 {
     @media (width >= 48rem) {
       margin-bottom: calc(var(--spacing) * 0);
@@ -9516,11 +9486,6 @@
       padding-bottom: calc(var(--spacing) * 24);
     }
   }
-  .md\:pb-\[140px\] {
-    @media (width >= 48rem) {
-      padding-bottom: 140px;
-    }
-  }
   .md\:text-2xl {
     @media (width >= 48rem) {
       font-size: var(--text-2xl);
@@ -9564,16 +9529,6 @@
   .lg\:mt-40 {
     @media (width >= 64rem) {
       margin-top: calc(var(--spacing) * 40);
-    }
-  }
-  .lg\:mt-50 {
-    @media (width >= 64rem) {
-      margin-top: calc(var(--spacing) * 50);
-    }
-  }
-  .lg\:mt-52 {
-    @media (width >= 64rem) {
-      margin-top: calc(var(--spacing) * 52);
     }
   }
   .lg\:mb-9 {
