--- a/src/output.css
+++ b/src/output.css
@@ -3655,9 +3655,6 @@
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
-  .right-1 {
-    right: calc(var(--spacing) * 1);
-  }
   .dock-lg {
     height: 4.5rem;
     height: calc(4.5rem + env(safe-area-inset-bottom));
@@ -5031,6 +5028,9 @@
   .mb-6 {
     margin-bottom: calc(var(--spacing) * 6);
   }
+  .ml-0 {
+    margin-left: calc(var(--spacing) * 0);
+  }
   .ml-0\.5 {
     margin-left: calc(var(--spacing) * 0.5);
   }
@@ -5723,6 +5723,9 @@
   .max-h-screen {
     max-height: 100vh;
   }
+  .min-h-\[405px\] {
+    min-height: 405px;
+  }
   .min-h-\[420px\] {
     min-height: 420px;
   }
@@ -5834,11 +5837,20 @@
       width: calc(0.25rem * 4);
     }
   }
+  .w-1 {
+    width: calc(var(--spacing) * 1);
+  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
   .w-4 {
     width: calc(var(--spacing) * 4);
+  }
+  .w-\[38\%\] {
+    width: 38%;
+  }
+  .w-\[45\%\] {
+    width: 45%;
   }
   .w-\[50\%\] {
     width: 50%;
@@ -7509,6 +7521,9 @@
     font-size: 0.625rem;
     padding-inline: calc(0.25rem * 2 - var(--border));
   }
+  .px-0 {
+    padding-inline: calc(var(--spacing) * 0);
+  }
   .px-0\.5 {
     padding-inline: calc(var(--spacing) * 0.5);
   }
@@ -7535,6 +7550,9 @@
   }
   .px-20 {
     padding-inline: calc(var(--spacing) * 20);
+  }
+  .py-0 {
+    padding-block: calc(var(--spacing) * 0);
   }
   .py-0\.5 {
     padding-block: calc(var(--spacing) * 0.5);
@@ -9299,6 +9317,11 @@
       display: block;
     }
   }
+  .sm\:min-h-\[420px\] {
+    @media (width >= 40rem) {
+      min-height: 420px;
+    }
+  }
   .sm\:min-h-\[570px\] {
     @media (width >= 40rem) {
       min-height: 570px;
@@ -9307,6 +9330,11 @@
   .sm\:w-\[40\%\] {
     @media (width >= 40rem) {
       width: 40%;
+    }
+  }
+  .sm\:w-\[42\%\] {
+    @media (width >= 40rem) {
+      width: 42%;
     }
   }
   .sm\:w-\[45\%\] {
@@ -9333,6 +9361,11 @@
   .sm\:bg-\[\#FFF9F4\] {
     @media (width >= 40rem) {
       background-color: #FFF9F4;
+    }
+  }
+  .sm\:px-14 {
+    @media (width >= 40rem) {
+      padding-inline: calc(var(--spacing) * 14);
     }
   }
   .sm\:py-36 {
@@ -9416,6 +9449,16 @@
       min-height: 640px;
     }
   }
+  .md\:w-\[38\%\] {
+    @media (width >= 48rem) {
+      width: 38%;
+    }
+  }
+  .md\:w-\[40\%\] {
+    @media (width >= 48rem) {
+      width: 40%;
+    }
+  }
   .md\:w-\[56\%\] {
     @media (width >= 48rem) {
       width: 56%;
@@ -9474,6 +9517,26 @@
   .md\:px-4 {
     @media (width >= 48rem) {
       padding-inline: calc(var(--spacing) * 4);
+    }
+  }
+  .md\:px-12 {
+    @media (width >= 48rem) {
+      padding-inline: calc(var(--spacing) * 12);
+    }
+  }
+  .md\:px-14 {
+    @media (width >= 48rem) {
+      padding-inline: calc(var(--spacing) * 14);
+    }
+  }
+  .md\:px-16 {
+    @media (width >= 48rem) {
+      padding-inline: calc(var(--spacing) * 16);
+    }
+  }
+  .md\:px-20 {
+    @media (width >= 48rem) {
+      padding-inline: calc(var(--spacing) * 20);
     }
   }
   .md\:py-8 {
@@ -9556,6 +9619,11 @@
       min-height: 780px;
     }
   }
+  .lg\:w-\[58\%\] {
+    @media (width >= 64rem) {
+      width: 58%;
+    }
+  }
   .lg\:grid-cols-6 {
     @media (width >= 64rem) {
       grid-template-columns: repeat(6, minmax(0, 1fr));
@@ -9574,6 +9642,11 @@
   .lg\:gap-8 {
     @media (width >= 64rem) {
       gap: calc(var(--spacing) * 8);
+    }
+  }
+  .lg\:px-8 {
+    @media (width >= 64rem) {
+      padding-inline: calc(var(--spacing) * 8);
     }
   }
   .lg\:py-\[18px\] {
@@ -9749,6 +9822,11 @@
   .\32 xl\:min-h-\[840px\] {
     @media (width >= 96rem) {
       min-height: 840px;
+    }
+  }
+  .\32 xl\:w-\[50\%\] {
+    @media (width >= 96rem) {
+      width: 50%;
     }
   }
 }
