--- a/src/output.css
+++ b/src/output.css
@@ -4944,6 +4944,9 @@
   .mt-8 {
     margin-top: calc(var(--spacing) * 8);
   }
+  .mt-10 {
+    margin-top: calc(var(--spacing) * 10);
+  }
   .mt-14 {
     margin-top: calc(var(--spacing) * 14);
   }
@@ -5019,6 +5022,9 @@
     opacity: 60%;
     font-weight: 600;
   }
+  .mb-3 {
+    margin-bottom: calc(var(--spacing) * 3);
+  }
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
   }
@@ -5027,6 +5033,9 @@
   }
   .mb-6 {
     margin-bottom: calc(var(--spacing) * 6);
+  }
+  .ml-0 {
+    margin-left: calc(var(--spacing) * 0);
   }
   .ml-0\.5 {
     margin-left: calc(var(--spacing) * 0.5);
@@ -5720,8 +5729,8 @@
   .max-h-screen {
     max-height: 100vh;
   }
-  .min-h-\[405px\] {
-    min-height: 405px;
+  .min-h-\[340px\] {
+    min-height: 340px;
   }
   .min-h-\[495px\] {
     min-height: 495px;
@@ -5831,11 +5840,20 @@
       width: calc(0.25rem * 4);
     }
   }
+  .w-1 {
+    width: calc(var(--spacing) * 1);
+  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
   .w-4 {
     width: calc(var(--spacing) * 4);
+  }
+  .w-56 {
+    width: calc(var(--spacing) * 56);
+  }
+  .w-60 {
+    width: calc(var(--spacing) * 60);
   }
   .w-\[50\%\] {
     width: 50%;
@@ -5848,6 +5866,12 @@
   }
   .w-\[92\%\] {
     width: 92%;
+  }
+  .w-\[197px\] {
+    width: 197px;
+  }
+  .w-\[235px\] {
+    width: 235px;
   }
   .w-full {
     width: 100%;
@@ -7506,6 +7530,9 @@
     font-size: 0.625rem;
     padding-inline: calc(0.25rem * 2 - var(--border));
   }
+  .px-0 {
+    padding-inline: calc(var(--spacing) * 0);
+  }
   .px-0\.5 {
     padding-inline: calc(var(--spacing) * 0.5);
   }
@@ -7515,14 +7542,14 @@
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
+  .px-5 {
+    padding-inline: calc(var(--spacing) * 5);
+  }
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
   }
   .px-8 {
     padding-inline: calc(var(--spacing) * 8);
-  }
-  .px-9 {
-    padding-inline: calc(var(--spacing) * 9);
   }
   .px-10 {
     padding-inline: calc(var(--spacing) * 10);
@@ -7533,8 +7560,17 @@
   .px-20 {
     padding-inline: calc(var(--spacing) * 20);
   }
+  .py-0 {
+    padding-block: calc(var(--spacing) * 0);
+  }
   .py-0\.5 {
     padding-block: calc(var(--spacing) * 0.5);
+  }
+  .py-1 {
+    padding-block: calc(var(--spacing) * 1);
+  }
+  .py-1\.5 {
+    padding-block: calc(var(--spacing) * 1.5);
   }
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
@@ -7640,6 +7676,10 @@
   .text-5xl {
     font-size: var(--text-5xl);
     line-height: var(--tw-leading, var(--text-5xl--line-height));
+  }
+  .text-base {
+    font-size: var(--text-base);
+    line-height: var(--tw-leading, var(--text-base--line-height));
   }
   .text-lg {
     font-size: var(--text-lg);
@@ -9276,6 +9316,11 @@
       margin-top: calc(var(--spacing) * 0);
     }
   }
+  .sm\:mt-14 {
+    @media (width >= 40rem) {
+      margin-top: calc(var(--spacing) * 14);
+    }
+  }
   .sm\:mt-32 {
     @media (width >= 40rem) {
       margin-top: calc(var(--spacing) * 32);
@@ -9284,6 +9329,11 @@
   .sm\:mt-36 {
     @media (width >= 40rem) {
       margin-top: calc(var(--spacing) * 36);
+    }
+  }
+  .sm\:mb-6 {
+    @media (width >= 40rem) {
+      margin-bottom: calc(var(--spacing) * 6);
     }
   }
   .sm\:mb-12 {
@@ -9304,6 +9354,11 @@
   .sm\:min-h-\[570px\] {
     @media (width >= 40rem) {
       min-height: 570px;
+    }
+  }
+  .sm\:w-3xs {
+    @media (width >= 40rem) {
+      width: var(--container-3xs);
     }
   }
   .sm\:w-\[40\%\] {
@@ -9390,6 +9445,11 @@
       margin-bottom: calc(var(--spacing) * 1);
     }
   }
+  .md\:mb-6 {
+    @media (width >= 48rem) {
+      margin-bottom: calc(var(--spacing) * 6);
+    }
+  }
   .md\:navbar-end {
     @media (width >= 48rem) {
       display: inline-flex;
@@ -9428,6 +9488,31 @@
       min-height: 640px;
     }
   }
+  .md\:w-32 {
+    @media (width >= 48rem) {
+      width: calc(var(--spacing) * 32);
+    }
+  }
+  .md\:w-40 {
+    @media (width >= 48rem) {
+      width: calc(var(--spacing) * 40);
+    }
+  }
+  .md\:w-44 {
+    @media (width >= 48rem) {
+      width: calc(var(--spacing) * 44);
+    }
+  }
+  .md\:w-48 {
+    @media (width >= 48rem) {
+      width: calc(var(--spacing) * 48);
+    }
+  }
+  .md\:w-56 {
+    @media (width >= 48rem) {
+      width: calc(var(--spacing) * 56);
+    }
+  }
   .md\:w-\[38\%\] {
     @media (width >= 48rem) {
       width: 38%;
@@ -9453,6 +9538,11 @@
       grid-template-columns: 25% auto;
     }
   }
+  .md\:grid-cols-\[30\%_auto\] {
+    @media (width >= 48rem) {
+      grid-template-columns: 30% auto;
+    }
+  }
   .md\:grid-cols-\[60\%_auto\] {
     @media (width >= 48rem) {
       grid-template-columns: 60% auto;
@@ -9473,6 +9563,11 @@
       place-items: start;
     }
   }
+  .md\:items-center {
+    @media (width >= 48rem) {
+      align-items: center;
+    }
+  }
   .md\:items-start {
     @media (width >= 48rem) {
       align-items: flex-start;
@@ -9481,6 +9576,16 @@
   .md\:gap-5 {
     @media (width >= 48rem) {
       gap: calc(var(--spacing) * 5);
+    }
+  }
+  .md\:gap-14 {
+    @media (width >= 48rem) {
+      gap: calc(var(--spacing) * 14);
+    }
+  }
+  .md\:gap-20 {
+    @media (width >= 48rem) {
+      gap: calc(var(--spacing) * 20);
     }
   }
   .md\:gap-28 {
@@ -9493,9 +9598,29 @@
       padding-inline: calc(var(--spacing) * 4);
     }
   }
+  .md\:px-8 {
+    @media (width >= 48rem) {
+      padding-inline: calc(var(--spacing) * 8);
+    }
+  }
+  .md\:px-9 {
+    @media (width >= 48rem) {
+      padding-inline: calc(var(--spacing) * 9);
+    }
+  }
   .md\:px-16 {
     @media (width >= 48rem) {
       padding-inline: calc(var(--spacing) * 16);
+    }
+  }
+  .md\:px-20 {
+    @media (width >= 48rem) {
+      padding-inline: calc(var(--spacing) * 20);
+    }
+  }
+  .md\:py-3 {
+    @media (width >= 48rem) {
+      padding-block: calc(var(--spacing) * 3);
     }
   }
   .md\:py-8 {
@@ -9503,9 +9628,19 @@
       padding-block: calc(var(--spacing) * 8);
     }
   }
+  .md\:py-10 {
+    @media (width >= 48rem) {
+      padding-block: calc(var(--spacing) * 10);
+    }
+  }
   .md\:pb-24 {
     @media (width >= 48rem) {
       padding-bottom: calc(var(--spacing) * 24);
+    }
+  }
+  .md\:text-start {
+    @media (width >= 48rem) {
+      text-align: start;
     }
   }
   .md\:text-2xl {
@@ -9526,10 +9661,22 @@
       line-height: var(--tw-leading, var(--text-lg--line-height));
     }
   }
+  .md\:text-sm {
+    @media (width >= 48rem) {
+      font-size: var(--text-sm);
+      line-height: var(--tw-leading, var(--text-sm--line-height));
+    }
+  }
   .md\:text-xl {
     @media (width >= 48rem) {
       font-size: var(--text-xl);
       line-height: var(--tw-leading, var(--text-xl--line-height));
+    }
+  }
+  .md\:text-xs {
+    @media (width >= 48rem) {
+      font-size: var(--text-xs);
+      line-height: var(--tw-leading, var(--text-xs--line-height));
     }
   }
   .md\:leading-9 {
@@ -9563,6 +9710,11 @@
       display: flex;
     }
   }
+  .lg\:hidden {
+    @media (width >= 64rem) {
+      display: none;
+    }
+  }
   .lg\:h-\[654px\] {
     @media (width >= 64rem) {
       height: 654px;
@@ -9578,14 +9730,44 @@
       min-height: 780px;
     }
   }
-  .lg\:w-\[58\%\] {
+  .lg\:w-3xs {
     @media (width >= 64rem) {
-      width: 58%;
+      width: var(--container-3xs);
+    }
+  }
+  .lg\:w-56 {
+    @media (width >= 64rem) {
+      width: calc(var(--spacing) * 56);
+    }
+  }
+  .lg\:w-72 {
+    @media (width >= 64rem) {
+      width: calc(var(--spacing) * 72);
+    }
+  }
+  .lg\:w-\[57\%\] {
+    @media (width >= 64rem) {
+      width: 57%;
+    }
+  }
+  .lg\:grid-cols-2 {
+    @media (width >= 64rem) {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
+  .lg\:grid-cols-3 {
+    @media (width >= 64rem) {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
     }
   }
   .lg\:grid-cols-6 {
     @media (width >= 64rem) {
       grid-template-columns: repeat(6, minmax(0, 1fr));
+    }
+  }
+  .lg\:grid-cols-\[25\%_auto\] {
+    @media (width >= 64rem) {
+      grid-template-columns: 25% auto;
     }
   }
   .lg\:grid-cols-\[40\%_auto\] {
@@ -9601,6 +9783,11 @@
   .lg\:gap-8 {
     @media (width >= 64rem) {
       gap: calc(var(--spacing) * 8);
+    }
+  }
+  .lg\:gap-28 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 28);
     }
   }
   .lg\:px-8 {
@@ -9700,14 +9887,39 @@
       margin-top: calc(var(--spacing) * 60);
     }
   }
+  .xl\:flex {
+    @media (width >= 80rem) {
+      display: flex;
+    }
+  }
   .xl\:min-h-\[430px\] {
     @media (width >= 80rem) {
       min-height: 430px;
     }
   }
+  .xl\:w-3xs {
+    @media (width >= 80rem) {
+      width: var(--container-3xs);
+    }
+  }
+  .xl\:w-80 {
+    @media (width >= 80rem) {
+      width: calc(var(--spacing) * 80);
+    }
+  }
+  .xl\:w-\[22rem\] {
+    @media (width >= 80rem) {
+      width: 22rem;
+    }
+  }
   .xl\:w-\[90\%\] {
     @media (width >= 80rem) {
       width: 90%;
+    }
+  }
+  .xl\:grid-cols-3 {
+    @media (width >= 80rem) {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
     }
   }
   .xl\:grid-cols-6 {
@@ -9768,6 +9980,18 @@
       line-height: var(--tw-leading, var(--text-lg--line-height));
     }
   }
+  .xl\:text-sm {
+    @media (width >= 80rem) {
+      font-size: var(--text-sm);
+      line-height: var(--tw-leading, var(--text-sm--line-height));
+    }
+  }
+  .xl\:text-xl {
+    @media (width >= 80rem) {
+      font-size: var(--text-xl);
+      line-height: var(--tw-leading, var(--text-xl--line-height));
+    }
+  }
   .xl\:text-\[3\.5rem\] {
     @media (width >= 80rem) {
       font-size: 3.5rem;
@@ -9781,6 +10005,21 @@
   .\32 xl\:min-h-\[840px\] {
     @media (width >= 96rem) {
       min-height: 840px;
+    }
+  }
+  .\32 xl\:w-96 {
+    @media (width >= 96rem) {
+      width: calc(var(--spacing) * 96);
+    }
+  }
+  .\32 xl\:w-\[21rem\] {
+    @media (width >= 96rem) {
+      width: 21rem;
+    }
+  }
+  .\32 xl\:w-\[26rem\] {
+    @media (width >= 96rem) {
+      width: 26rem;
     }
   }
   .\32 xl\:w-\[48\%\] {
